--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <script defer src="./js/app.js"></script>
-  <title>Tic-Tac-Toe</title>
-</head>
-<body>
-  <h1>Tic-Tac-Toe</h1>
-  <h2 id="message">Message</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href=".style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <title>Tic-Tac-Toe</title>
+  </head>
+  <body>
+    <h1>Tic-Tac-Toe</h1>
+    <h2 id="message">Message</h2>
 
-  <section class="board">
-    <div class="sqr" id="0"></div>
-    <div class="sqr" id="1"></div>
-    <div class="sqr" id="2"></div>
-    <div class="sqr" id="3"></div>
-    <div class="sqr" id="4"></div>
-    <div class="sqr" id="5"></div>
-    <div class="sqr" id="6"></div>
-    <div class="sqr" id="7"></div>
-    <div class="sqr" id="8"></div>
-  </section>
-</body>
+    <section class="board">
+      <div class="sqr" id="0"></div>
+      <div class="sqr" id="1"></div>
+      <div class="sqr" id="2"></div>
+      <div class="sqr" id="3"></div>
+      <div class="sqr" id="4"></div>
+      <div class="sqr" id="5"></div>
+      <div class="sqr" id="6"></div>
+      <div class="sqr" id="7"></div>
+      <div class="sqr" id="8"></div>
+    </section>
+    <script defer src=".app.js"></script>
+  </body>
 </html>
-
