--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href=".style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,6 +27,6 @@
       <div class="sqr" id="7"></div>
       <div class="sqr" id="8"></div>
     </section>
-    <script defer src=".app.js"></script>
+    <script defer src="app.js"></script>
   </body>
 </html>
