--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Fascinate+Inline&display=swap"
+      rel="stylesheet"
+    />
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
     <h1>Tic-Tac-Toe</h1>
     <h2 id="message">Message</h2>
-
     <section class="board">
       <div class="sqr" id="0"></div>
       <div class="sqr" id="1"></div>
@@ -26,6 +29,7 @@
       <div class="sqr" id="6"></div>
       <div class="sqr" id="7"></div>
       <div class="sqr" id="8"></div>
+      <input class="btn btn-primary" type="reset" value="Reset" />
     </section>
     <script defer src="app.js"></script>
   </body>
